# Lunacity

./: Cargo.toml  IDEAS.md  README.md
rt_lib/: Cargo.toml
rt_lib/shaders/: camera_ray_cs.glsl  combine_cs.glsl  common.glsl  display_cs.glsl  passthrough_fs.glsl  passthrough_vs.glsl  raytracing_cs.glsl  settings.glsl  shading_cs.glsl  spawn_wave_cs.glsl  unused.glsl
rt_lib/shaders/brdf/: generated.glsl  lambert.glsl  mat.glsl
rt_lib/shaders/raytracing/: distance_fields.glsl
rt_lib/src/: lib.rs  shader_processor.rs
rt_lib/src/objects/: brdf.rs  camera.rs  mod.rs
rt_test/: Cargo.toml
rt_test/src/: main.rs
