[package]
name = "rt_lib"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
glux = { git = "https://github.com/Lucky4Luuk/GLux.git" }
gl = "0.14.0"
glam = "*"
rand = "*"
