[package]
name = "rt_test"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
pretty_env_logger = "*"

# Window/rendering
glux = { git = "https://github.com/Lucky4Luuk/GLux.git" }
sdl2 = { version = "0.33", features = ["bundled"] }
gl = "0.14.0"
rt_lib = { path = "../rt_lib" }
